prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aim-prod-decomission-site
  namespace: aim-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: "registrations.appleislemoot.com.au"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: decomission-site
            port:
              number: 80
  tls:
  - secretName: registrations-tls-cert
    hosts:
    - registrations.appleislemoot.com.au
